--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,14 @@
   <meta name="description"
     content="Xtreme is powerful and clean admin dashboard template, inpired from Bootstrap Framework">
   <meta name="robots" content="noindex,nofollow">
-  <title>Monster Admin Template by WrapPixel</title>
+  <title>Depression Test,University of Phayao</title>
   <link rel="canonical" href="htthttps://www.wrappixel.com/templates/monster-angular-dashboard/" />
   <!-- Favicon icon -->
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/University_of_Phayao_Logo.svg.png">
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
- 
+
 
 
 
